# CabbageHardware

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Examples/: CMakeLists.txt  Config.h  Cube.h  CubeData.h  RenderThread.h  RuntimeConfig.cpp  ScenarioRegistry.h  SignalHandler.h  TextureTest.h  baseline.cpp  baseline.h  compute.glsl  frag.glsl  main - 副本.cpp  main.cpp  multithreading.cpp  runtime_config.h  scenario.h  simpleCompute.glsl  simpleFrag.glsl  simpleVert.glsl  vert.glsl
Examples/hello_triangle/: CubeData.h  HelloTriangleRender.cpp  HelloTriangleRender.h
Examples/multishader/: DropOldestQueue.h  HelloTriangleScenario.cpp  HelloTriangleScenario.h  RuntimeConfig.h  Scenario.h  ScenarioRegistry.cpp
Scripts/: main.cpp
Src/: CMakeLists.txt  CabbageDisplayer.h  CabbageHardware.h  HardwareBuffer.cpp  HardwareDisplayer.cpp  HardwareExecutor.cpp  HardwareImage.cpp  HardwarePushConstant.cpp  VulkanUtils.h
Src/Display/: DisplayManager.cpp  DisplayManager.h
Src/Hardware/: DeviceManager.cpp  DeviceManager.h  FeaturesChain.cpp  FeaturesChain.h  GlobalContext.cpp  GlobalContext.h  HardwareExecutor.cpp  HardwareExecutor.h  HardwareUtil.h  ResourceCommand.cpp  ResourceCommand.h  ResourceManager.cpp  ResourceManager.h
Src/HardwareAPI/: HardwareExecutor.cpp
Src/HardwareVulkan/DisplayVulkan/: DisplayManager.h
Src/HardwareVulkan/HardwareVulkan/: DeviceManager.cpp  FeaturesChain.cpp  HardwareExecutorVulkan.cpp  HardwareExecutorVulkan.h
Src/HardwareVulkan/PipelineVulkan/: ComputePipeline.cpp  RasterizerPipeline.cpp
Src/HardwareWrapper/: ComputePipeline.cpp  HardwareBuffer.cpp  HardwareCommands.cpp  HardwareDisplayer.cpp  HardwareExecutor.cpp  HardwareImage.cpp  HardwarePushConstant.cpp  HardwareSampler.cpp  InternalAccessor.h  RasterizerPipeline.cpp
Src/HardwareWrapperAPI/: HardwareDisplayer.cpp  HardwarePushConstant.cpp  RasterizerPipeline.cpp
Src/HardwareWrapperVulkan/: HardwareContext.cpp  HardwareContext.h  HardwareUtils.h  HardwareUtilsVulkan.h  ResourcePool.cpp  ResourcePool.h  ResourceRegistry.h
Src/HardwareWrapperVulkan/DisplayVulkan/: DisplayManager.cpp  DisplayManager.h
Src/HardwareWrapperVulkan/HardwareVulkan/: DeviceManager.cpp  DeviceManager.h  FeaturesChain.cpp  FeaturesChain.h  HardwareExecutorVulkan.cpp  HardwareExecutorVulkan.h  ResourceAccessTracker.cpp  ResourceAccessTracker.h  ResourceCommand.cpp  ResourceCommand.h  ResourceManager.cpp  ResourceManager.h  ResourceStateTracker.cpp  ResourceStateTracker.h
Src/HardwareWrapperVulkan/PipelineVulkan/: ComputePipeline.cpp  ComputePipeline.h  RasterizerPipeline.cpp  RasterizerPipeline.h
Src/Helicon/Codegen/: BindingKey.h  ComputePipelineObject.h  VariateProxy.h
Src/Helicon/Codegen/AST/: Node.hpp  Parser.cpp  Parser.hpp
Src/Helicon/Codegen/Generator/: SlangGenerator.cpp
Src/Helicon/Compiler/: ShaderCodeCompiler.cpp  ShaderCodeCompiler.h  ShaderHardcodeManager.cpp  ShaderHardcodeManager.h  ShaderLanguageConverter.cpp
Src/Helicon/Compiler/HardcodeShaders/: .gitignore  HardcodeShaders.cpp  HardcodeShaders.h  HardcodeShadersComputeShader.cpp  HardcodeShadersFragmentShader.cpp  HardcodeShadersVertexShader.cpp  compute.glsl.hpp  frag.glsl.hpp  ht_frag.glsl.hpp  ht_vert.glsl.hpp  vert.glsl.hpp
Src/Pipeline/: ComputePipeline.cpp  ComputePipeline.h  RasterizerPipeline.cpp  RasterizerPipeline.h
cmake/: HeliconShaderCompile.cmake
doc/: TodoList.md
examples/: CMakeLists.txt  cube_data.h  default_scenario.cpp  default_scenario.h  drop_oldest_queue.h  main.cpp  runtime_config.cpp  runtime_config.h  scenario.h  scenario_registry.cpp  scenario_registry.h
examples/1_default_test/: compute_header.glsl  cube_data.h  default_compute.glsl  default_scenario.cpp  default_scenario.h
examples/2_triangle_test/: triangle_data.h  triangle_scenario.cpp  triangle_scenario.h
examples/3_texture_test/: texture_data.h  texture_frag.glsl  texture_scenario.cpp  texture_scenario.h  texture_vert.glsl
examples/4_lighting_test/: materials_frag.glsl
examples/common/: asset_utils.cpp  asset_utils.h  texture_loader.cpp  texture_loader.h
examples/default_test/: default_scenario.cpp  default_scenario.h
examples/hello_triangle/: HelloTriangleScenario.cpp  HelloTriangleScenario.h  hello_triangle_scenario.cpp  hello_triangle_scenario.h
examples/triangle_test/: hello_triangle_scenario.cpp  hello_triangle_scenario.h
examples/unorganized/: baseline.cpp
include/: CabbageHardware.h  HardwareCommands.h
tests/: CMakeLists.txt  lifecycle_tests.cpp
